修复pom一些jar依赖问题 更换JPA至MyBatis